# FLask_auth

./: .env_example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: auth_api.yml
app/: __init__.py  utils.py
app/api/: auth.py  roles.py  users.py
app/api/v1/: __init__.py  auth.py  roles.py  users.py
app/core/: alchemy.py  config.py  enums.py  oauth.py  redis.py
app/core/oauth/: base.py
app/models/: __init__.py  db_models.py  user.py
app/serializers/: auth.py  users.py
migrations/versions/: 233a887b105b_initial_migration.py
nginx/: default.conf
tests/: .env_example  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
tests/functional/: conftest.py  pyproject.toml  pytest.ini  settings.py
tests/functional/src/: auth_test.py  roles_test.py  users_test.py
